2009-12-08  Charley Wang  <chwang@redhat.com>

	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchConfigurationDelegate.java: Change delegate to launch by creating a temporary shell script, rather than launch directly.
	Make generateCommand public
	Do not setExecutable.

2009-12-06  rgrunber  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchConfigurationDelegate.java 
		(createProcess): Return null when a process fails to execute and let use decide action to take.

2009-11-26  Charley Wang  <chwang@redhat.com>

	* META-INF/MANIFEST.MF: Add org.eclipse.cdt.core, which seems needed with some versions and not with others.
	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchConfigurationDelegate.java: Add generateCommand abstract function for command generation. This is called by createProcess()

2009-11-23  Charley Wang  <chwang@redhat.com>

	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchConfigurationTab.java: Add (Currently empty) ProfileLaunchConfigurationTab
	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchShortcut.java: Improve documentation on abstract functions
	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchConfigurationDelegate.java: Add ProfileLaunchConfigurationDelegate. This class contains functions that Roland and I had difficulty with when we were creating the SystemTap plugin, namely the creation and reading of a process. 

2009-08-11  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Bump version to 0.3.0.

2009-08-07  Andrew Overholt  <overholt@redhat.com>

	* plugin.properties: Change provider from Eclipse.org to Eclipse.

2009-07-30  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/profiling/launch/Messages.java: Removed.
	* src/org/eclipse/linuxtools/profiling/launch/messages.properties: Removed.
	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchPlugin.java: Removed.